one-way switches (can connect against them)