@@ -4,6 +4,7 @@ import org.bukkit.Location;
 import org.bukkit.Material;
 import org.bukkit.block.Block;
 import org.bukkit.block.BlockFace;
+import org.bukkit.block.data.Directional;
 import org.bukkit.block.data.Rail;
 import org.bukkit.entity.EntityType;
 import org.bukkit.event.EventHandler;
@@ -12,7 +13,6 @@ import org.bukkit.event.vehicle.VehicleMoveEvent;
 
 import java.text.MessageFormat;
 import java.util.ArrayList;
-import java.util.stream.Collectors;
 
 public class MinecartListener implements Listener
 {
@@ -31,7 +31,7 @@ public class MinecartListener implements Listener
 
         var rails = vehicle.getLocation().getBlock();
 
-        if (blockIsTwoWaySwitch(rails))
+        if (isRailwaySwitch(rails))
         {
             var direction = getCartDirection(getVelocity(event));
 
@@ -46,10 +46,26 @@ public class MinecartListener implements Listener
         }
     }
 
-    private static boolean blockIsTwoWaySwitch(Block rails)
+    private static boolean isRailwaySwitch(Block rails)
     {
-        var bottom = rails.getRelative(BlockFace.DOWN).getType();
-        return rails.getType() == Material.ACTIVATOR_RAIL && (bottom == Material.IRON_BLOCK || bottom == Material.OAK_LOG);
+        var supporting = rails.getRelative(BlockFace.DOWN);
+        return isTwoWaySwitch(rails, supporting) || isOneWaySwitch(rails, supporting);
+    }
+
+    private static boolean isTwoWaySwitch(Block rail, Block supporting)
+    {
+        var type = supporting.getType();
+        return rail.getType() == Material.ACTIVATOR_RAIL && (type == Material.IRON_BLOCK || type == Material.OAK_LOG);
+    }
+
+    private static boolean isOneWaySwitch(Block rail, Block supporting)
+    {
+        return rail.getType() == Material.ACTIVATOR_RAIL && supporting.getBlockData() instanceof Directional;
+    }
+
+    private static BlockFace getOneWaySwitchDirection(Block supporting)
+    {
+        return ((Directional) supporting.getBlockData()).getFacing();
     }
 
     private static Location getVelocity(VehicleMoveEvent event)
@@ -76,18 +92,24 @@ public class MinecartListener implements Listener
         // can't turn backwards
         routes.remove(minecartDirection.getOppositeFace());
 
-        // derailing prevention
         for (int i = 3; i > 0; )
         {
-            var next = rail.getRelative(routes.get(--i));
+            var direction = routes.get(--i);
+
+            var next = rail.getRelative(direction);
             var down = next.getRelative(BlockFace.DOWN);
-            if (!(blockIsAnyRail(next) || blockIsAnyRail(down))) routes.remove(i);
+
+            // can't be derailed + can't turn to one-way switch pointing to them
+            if (!(blockIsAnyRail(next) || blockIsAnyRail(down)) || isOppositeOneWaySwitch(next, down, direction))
+            {
+                routes.remove(i);
+            }
         }
 
         // go straight if there's nowhere to turn
         if (routes.isEmpty()) return getRailShape(minecartDirection, minecartDirection);
 
-        var angles = routes.stream().map(x -> angleDifference(passengerYaw, getDirectionYaw(x))).collect(Collectors.toList());
+        var angles = routes.stream().map(x -> angleDifference(passengerYaw, getDirectionYaw(x))).toList();
 
         var closest = angles.stream().min(Float::compareTo);
         var index = closest.map(angles::indexOf).orElse(0);
@@ -100,6 +122,19 @@ public class MinecartListener implements Listener
     {
         var type = block.getType();
         return type == Material.RAIL || type == Material.POWERED_RAIL || type == Material.ACTIVATOR_RAIL || type == Material.DETECTOR_RAIL;
+    }
+
+    private static boolean isOppositeOneWaySwitch(Block rail, Block supporting, BlockFace turn)
+    {
+        if (isOneWaySwitch(rail, supporting))
+        {
+            if (getOneWaySwitchDirection(supporting) == turn.getOppositeFace())
+            {
+                var shape = isFacingAlongZ(turn) ? Rail.Shape.NORTH_SOUTH : Rail.Shape.EAST_WEST;
+                return ((Rail) rail.getBlockData()).getShape() == shape;
+            }
+        }
+        return false;
     }
 
     private static float getDirectionYaw(BlockFace direction)
@@ -121,7 +156,7 @@ public class MinecartListener implements Listener
 
     private static Rail.Shape getRailShape(BlockFace straight, BlockFace turn)
     {
-        var alongZ = straight.ordinal() % 2 == 0;
+        var alongZ = isFacingAlongZ(straight);
 
         if (straight == turn) return alongZ ? Rail.Shape.NORTH_SOUTH : Rail.Shape.EAST_WEST;
 
@@ -129,6 +164,11 @@ public class MinecartListener implements Listener
         var b = turn.name();
 
         return Rail.Shape.valueOf(MessageFormat.format(alongZ ? "{0}_{1}" : "{1}_{0}", a, b));
+    }
+
+    private static boolean isFacingAlongZ(BlockFace face)
+    {
+        return face.ordinal() % 2 == 0;
     }
 
     private static void setRailShape(Block rail, Rail.Shape shape)
